--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
         <!-- --------------------------------------------loading------------------------------------------ -->
         <section id="loading" class="d-flex justify-content-center align-items-center">
-
+            <div class="bg-danger"></div>
 
 
             <div class="content" id="store-container">
